--- a/app/index.html
+++ b/app/index.html
@@ -24,12 +24,21 @@
   </header>
 
   <div class="large-hero">
-    <img src="assets/images/hero--large.jpg">
+    <picture>
+       <source srcset="assets/images/hero--large.jpg" media="(min-width:1380px)">  
+        <source srcset="assets/images/hero--medium.jpg" media="(min-width:990px)">  
+        <source srcset="assets/images/hero--small.jpg" media="(min-width:640px)">  
+        <img src="assets/images/hero--smaller.jpg" alt="Cosatl view of ocean and mountains">
+    </picture>
+  
     <div class="large-hero__text-content">
-      <h1 class="large-hero__title">Your clarity.</h1>
-      <h2 class="large-hero__subtitle">One trip away.</h2>
-      <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-      <p><a href="#" class="btn btn__orange btn__large">Get Started Today</a></p>
+      <div class="wrapper"> 
+        <h1 class="large-hero__title">Your clarity.</h1>
+        <h2 class="large-hero__subtitle">One trip away.</h2>
+        <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
+        <p><a href="#" class="btn btn__orange btn__large">Get Started Today</a></p>
+      </div>
+     
     </div>
   </div>
 
