--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
@@ -11,16 +10,29 @@
 </head>
 
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+ <div class="wrapper">
+    <div class="site-header__logo">
+      <div class="site-header__logo__graphic icon icon--clear-view-escapes">
+        Clear View Escapes
+      </div>
+    </div>
+    <div class="site-header__menu-icon">
+        <div class="site-header__menu-icon__middle"></div>
+    </div>
+    <div class="site-header__menu-content">
+      <div class="site-header__btn-container">
+        <a href="#" class="btn">Get in Touch</a>
+      </div>
+      <nav class="primary-nav primary-nav--pull-right">
+        <ul>
+          <li><a href="#our-beginning">Our Beginning</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+        </ul>
+      </nav>
+    </div>
+ </div>
   </header>
 
  <div class="large-hero">
@@ -80,7 +92,7 @@
 
   <div id="features" class="page-section page-section__blue">
     <div class="wrapper">
-      <!-- In the 'span' element icon class defines the url and icon--star the icon itself -->
+      <!-- In the 'span' element icon class defines the url and icon star the icon itself -->
       <h2 class="section-title"><span class="icon icon--star section-title__icon"></span>Our <strong>Features</strong></h2>
         <div class="row row--gutters-large generic-content-container">
           <div class="row__medium-6">
@@ -124,7 +136,7 @@
       <div class="row__large-4">
         <div class="testimonial">
           <div class="testimonial__photo">
-            <img sizes="160px"srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+            <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
           </div>
           <h3 class="testimonial__title">Jane Doe</h3>
           <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -149,7 +161,7 @@
       <div class="row__large-4">
          <div class="testimonial testimonial--last">
           <div class="testimonial__photo">
-            <img sizes="160px"srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+            <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
           </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="tetimonial__subtitle">6 Time Escaper</h4>
@@ -167,6 +179,7 @@
       <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn__orange">Get in Touch</a></p>
     </div>
   </footer>
+  <script src="temp/scripts/App.js"></script>
 </body>
 
 </html>
