--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="temp/styles/styles.css">
-  <script src="/temp/scripts/Vendor.js"></script>
+  <script src="temp/scripts/Vendor.js"></script>
 </head>
 
 <body>
@@ -183,7 +183,7 @@
   <div class="modal">
     <div class="modal__inner">
       <h2 class="section-title section-title--blue section-title--less-margin">
-      <span class="icon icon--mail section-title__icon"></span>Get in <strong>Touch</strong></h2>
+      <span class="icon icon--mail section-title__icon open-modal"></span>Get in <strong>Touch</strong></h2>
       <div class="wrapper wrapper--narrow">
          <p class="modal__description">We will have an online order system soon. Until then, connect with us on any of the platforms below!</p>
       </div>
@@ -197,6 +197,6 @@
      <div class="modal__close">X</div>     
   </div>
   <script src="temp/scripts/App.js"></script>
-</body>
+  </body>
 
 </html>
